apps/edge-demo/event-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: edgenius
  name: eventapi
  labels:
    app: eventapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventapi
  template:
    metadata:
      labels:
        app: eventapi
    spec:
      containers:
        - name: eventapi
          image: griffins.azurecr.io/edge-demo-event-api:1.0.8
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: griffinsreg
