apps/edge-demo/event-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventapi
  namespace: edgenius
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /eventapi(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: eventapi
              port:
                number: 80
